--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,5 +1,12 @@
 @media screen and (max-width:1230px) {
-    body {
-        background-color: red;
+    .intro {
+        &__suptitle {
+            font-size: 52px;
+        }
+        &__title {
+            font-size: 120px;
+        }
     }
 }
+
+@media screen and (max-width:992px) {}
